public interface MusicPlayer {
    public void tocar();
    public void pausar();
    public void parar();

}
