public interface Navegador {
    public void navegar();
    public void pesquisar();
    public void exibirPagina();
    public void adicionarNovaAba();
    public void atualizarPagina();
}
