public interface Telefone {
    public void ligar();
    public void atender();
    public void desligarChamada();
}
